[gd_scene load_steps=2 format=3 uid="uid://btovbm7r6nern"]

[ext_resource type="Script" uid="uid://t708tcf43ayu" path="res://ui/StorefrontUI.gd" id="1_ih31k"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ih31k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 400.0
offset_bottom = 100.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
current_tab = 0

[node name="BuildTab" type="VBoxContainer" parent="PanelContainer/MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0
metadata/_tab_name = "Build"

[node name="TreasuryDisplay" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/BuildTab"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/TreasuryDisplay"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/TreasuryDisplay"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/TreasuryDisplay"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/TreasuryDisplay"]
layout_mode = 2

[node name="BuildButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/BuildTab"]
layout_mode = 2

[node name="BuyWallButton" type="Button" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/BuildButtons"]
layout_mode = 2

[node name="BuyLumberYardButton" type="Button" parent="PanelContainer/MarginContainer/TabContainer/BuildTab/BuildButtons"]
layout_mode = 2

[node name="RecruitTab" type="VBoxContainer" parent="PanelContainer/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1
metadata/_tab_name = "Recruit"

[node name="RecruitButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/RecruitTab"]
layout_mode = 2
